force-app/main/default/objects/OpportunityLineItem/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <formula>AND(
  PricebookEntry.Product2.IsActive,
  PricebookEntry.IsActive
)</formula>
    <label>Active Product</label>
    <type>Checkbox</type>
</CustomField>