force-app/main/default/objects/OpportunityLineItem/fields/ACV_Change__c.field-meta.xml
<CustomField>
    <fullName>ACV_Change__c</fullName>
    <description>BIZ-50365: ACV Change field should match with quote line ACV change value</description>
    <formula>SBQQ__QuoteLine__r.ACV_Change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>