force-app/main/default/objects/OpportunityLineItem/fields/ACV_Change_Manual__c.field-meta.xml
<CustomField>
    <fullName>ACV_Change_Manual__c</fullName>
    <label>ACV Change (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>