force-app/main/default/objects/OpportunityLineItem/fields/ACV_Type__c.field-meta.xml
<CustomField>
    <fullName>ACV_Type__c</fullName>
    <label>ACV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Type</valueSetName>
    </valueSet>
</CustomField>