force-app/main/default/objects/OpportunityLineItem/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <label>CPI</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>