force-app/main/default/objects/OpportunityLineItem/fields/Inherited_ACV_Type__c.field-meta.xml
<CustomField>
    <fullName>Inherited_ACV_Type__c</fullName>
    <description>Created as part of BIZ-46501.</description>
    <label>Inherited ACV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inherited_ACV_Type</valueSetName>
    </valueSet>
</CustomField>