force-app/main/default/objects/OpportunityLineItem/fields/Item_Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Master Product</label>
    <referenceTo>Item_Master_Product__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>