force-app/main/default/objects/OpportunityLineItem/fields/Marked_at_risk_date__c.field-meta.xml
<CustomField>
    <fullName>Marked_at_risk_date__c</fullName>
    <description>This field contains date when product was marked &quot;at risk&quot;</description>
    <inlineHelpText>This field contains date when product was marked &quot;at risk&quot;</inlineHelpText>
    <label>Marked At Risk Date</label>
    <type>Date</type>
</CustomField>