force-app/main/default/objects/OpportunityLineItem/fields/Net_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount2__c</fullName>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>