force-app/main/default/objects/OpportunityLineItem/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <description>Field to hold value of Net total on the quote line</description>
    <formula>SBQQ__QuoteLine__r.SBQQ__NetTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>