force-app/main/default/objects/OpportunityLineItem/fields/NS_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>NS_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NS Invoice Line Item</label>
    <referenceTo>NS_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>