force-app/main/default/objects/OpportunityLineItem/fields/OP4I_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Id__c</fullName>
    <formula>Opportunity.OP4I_Deal_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Deal Id</label>
    <type>Text</type>
</CustomField>