force-app/main/default/objects/OpportunityLineItem/fields/OP4I_System_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_System_Id__c</fullName>
    <label>OP4I System Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>