force-app/main/default/objects/OpportunityLineItem/fields/OSA_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>OSA_Discount_Amount__c</fullName>
    <label>OSA Discount Amount (Recurring Software)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>