force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Product__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Product</label>
    <type>Checkbox</type>
</CustomField>