force-app/main/default/objects/OpportunityLineItem/fields/Recurring_Value__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Value__c</fullName>
    <formula>IF( Opportunity_Product_Revenue_Type__c = &quot;Recurring&quot;,  TotalPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>