force-app/main/default/objects/OpportunityLineItem/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>Custom sales price field used to sync monthly unit price from Quote Line to Opportunity Product.</description>
    <label>Sales Price Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>