force-app/main/default/objects/OpportunityLineItem/fields/Salesforce_Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Order_Line_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Order Line Id</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>