force-app/main/default/objects/OpportunityLineItem/fields/Services_Product__c.field-meta.xml
<CustomField>
    <fullName>Services_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services Product</label>
    <type>Checkbox</type>
</CustomField>