force-app/main/default/objects/OpportunityLineItem/fields/Skip_OP4I_Sync__c.field-meta.xml
<CustomField>
    <fullName>Skip_OP4I_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To bypass integration for static bundle child products;BIZ-49254</description>
    <label>Skip OP4I Sync</label>
    <type>Checkbox</type>
</CustomField>