force-app/main/default/objects/OpportunityLineItem/fields/Subtotal_per_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_per_Lawyer__c</fullName>
    <formula>Subtotal__c / Opportunity.Account.Lawyers__c</formula>
    <label>Subtotal per Lawyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>