force-app/main/default/objects/OpportunityLineItem/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <description>When are the assessment or services scheduled to complete?</description>
    <inlineHelpText>When are the assessment or services scheduled to complete?</inlineHelpText>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>